# CVEX

./: .gitignore  Pipfile  README.md  advanced_exploit.py  debug.sh  install.sh  procmon_basic_config.pmc  pyproject.toml  setup.sh  test.c  test.sh
CVE-000000-00/: infrastructure.json  infrastructure.yaml  infrastructure.yml  linux.yml  windows.yml
CVE-000000-00/conf.d/: crt  key
CVE-000000-00/data/: index.html
CVE-000000-01/: exploit.py  infrastructure.yml  linux.yml
CVE-000000-01/data/: default.conf
CVE-000000-02/: infrastructure.yml  windows.yml
CVE-000000-02/data/: default.conf
ansible/: linux.yml  linux_router.yml  router.yml  windows.yml  windows_router.yml  windows_tools.yml
blueprints/ubuntu1804/: blueprint.yml
blueprints/ubuntu2004/: blueprint.yml
blueprints/ubuntu2204/: blueprint.yml
blueprints/ubuntu2204-ubuntu2204/: blueprint.yml
blueprints/windows10/: blueprint.yml
blueprints/windows10-ubuntu2204/: blueprint.yml
blueprints/windows10-windows10/: blueprint.yml
cvex/: __main__.py  consts.py  exploit.py  ip_manager.py  linuxvm.py  logger.py  routervm.py  ssh.py  vm.py  windowsvm.py
data/: default.cfg  rootCA.crt  rootCA.key
records/CVE-0000-00000/: linux.yml
records/CVE-0000-00001/: ubuntu1.yml
records/CVE-0000-00002/: cvex.yml
records/CVE-0000-00003/: windows1.yml
records/CVE-000000-00/: cvex.yml  linux.yml
records/CVE-000000-01/: cvex.yml
records/CVE-000000-03/: cvex.yml
records/CVE-2020-1938/: ubuntu1.yml  ubuntu2.yml
records/CVE-2021-44228/: cvex.yml  readme.txt  ubuntu1.yml  ubuntu2.yml
scripts/: cvex.py
(+29 files in other folders)
