[tool.poetry]
name = "cvex"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-vagrant = "^1.0.0"
paramiko = "^3.4.1"
PyYAML = "^6.0.2"
fabric = "^3.2.2"
procmon-parser = "^0.3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
